--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 
 #controls
 {
-	background-color: red;
+	background-color: #CC0000;
 	height: 50px;
 	width: 500px;
 	margin: auto;
@@ -15,18 +15,48 @@
 {
 	height: 20px;
 	width: 35px;
-	background-color: gray;
+	border-radius: 12px;
+	display: inline-block;
+	background-color: #FFFE02;
 	float: left;	
-	border: 1px black solid;
-	border-radius: 5px;
+	border: none
+	font-size: 15px;
+	color: black;
+	text-align: center;
+	padding: 5px 5px;
+	margin: 10px 10px;
+	cursor: pointer;
+	transition-duration: .5s;
+
+}
+
+#changePixelButton
+{
+	height: 20px;
+	width: 120px;
+	border-radius: 12px;
+	display: inline-block;
+	background-color: #1480CC;
+	float: right;
+	border: none
 	font-size: 15px;
 	color: white;
 	text-align: center;
+	padding: 5px 5px;
+	margin: 10px 10px;
+	cursor: pointer;
+	transition-duration: .5s;
+
 }
 
 #clearButton:hover
 {
-	background-color: #2F4F4F;
+	background-color: #FFBD25;
+}
+
+#changePixelButton:hover
+{
+	background-color: #004DB2;
 }
 
 #canvas
@@ -34,13 +64,13 @@
 
 	margin: auto;
 	height: 500px;
-	width: 500px;
-
+	width: 500px
 }
-
 #grid
+
 {
 	border-collapse: collapse;
+	border: 10px solid #CC0000;
 }
 
 
